Bug 404634 - "http urls don't render in TestGtkEmbed" [p=asac@jwsdot.com (Alexander Sack) r=bsmedberg r=bzbarsky a=blocking1.9+]